--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -53,10 +53,12 @@
         <a href="{{ site.affiliation_link }}" rel="noopener"><autocolor>{{ site.affiliation }}</autocolor></a>
         <br>
         {% endif %}
-        {% if site.email %}
-        <email>{{ site.email }}</email>
+        {% if site.email-1 %}
+        <email-1>{{ site.email-1 }}</email-1>
         {% endif %}
-
+        {% if site.email-2 %}
+        <email-2>{{ site.email-2 }}</email-2>
+        {% endif %}
         <br>
         <br>
         <div class="social-icons">
