--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -59,6 +59,10 @@
         {% if site.email-2 %}
         <email-2>{{ site.email-2 }}</email-2>
         {% endif %}
+        {% if site.position %}
+        <CoreLine style="font-size:1.10rem;">{{ site.CoreLine }}</CoreLine>
+        {% endif %}
+        <br>
         <br>
         <br>
         <div class="social-icons">
