--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -59,8 +59,9 @@
         {% if site.email-2 %}
         <email-2>{{ site.email-2 }}</email-2>
         {% endif %}
-        {% if site.position %}
+        {% if site.CoreLine %}
         <CoreLine style="font-size:1.10rem;">{{ site.CoreLine }}</CoreLine>
+        <br>
         {% endif %}
         <br>
         <br>
