--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -61,7 +61,7 @@
         <br>
         {% endif %}
         {% if site.CoreLine %}
-        <CoreLine style="font-size:1.10rem;">{{ site.CoreLine }}</CoreLine>
+        <CoreLine>{{ site.CoreLine }}</CoreLine>
         <br>
         {% endif %}
         <br>
